--- a/btr/templates/bookings/next_calendar.html
+++ b/btr/templates/bookings/next_calendar.html
@@ -1,7 +1,7 @@
 {% load static %}
 {% load i18n %}
 
-<table class="table text-white text-center mt-4">
+<table class="table text-white text-center" style="color: rgb(56, 58, 74); border-color: rgb(156, 157, 165);">
     <thead>
        <tr class="text-center">
            <th scope="col" colspan="7">{{ next_month }}, {{ next_year }}</th>
