--- a/btr/templates/users/form.html
+++ b/btr/templates/users/form.html
@@ -8,8 +8,9 @@
         $('#id_phone_number').inputmask('+7(999) 999-99-99');
     });
 </script>
+<div class="dark-bg">
 <div class="container">
-    <div class="row bg-form">
+    <div class="row frame-dark">
         <div class="col-3"></div>
         <div class="col-6  lg-m-y">
             <h1 class="mb-5 text-center text-white">{{ header }}</h1>
@@ -24,5 +25,6 @@
             {% endif %}
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
